Fix file type badge alignment

--- a/web/static/css/autosubliminal.css
+++ b/web/static/css/autosubliminal.css
@@ -756,6 +756,12 @@ table.tablesorter .filtered {
     vertical-align: middle;
     border-radius: 0.25em;
     background-color: #dddddd;
+    margin-right: 8px;
+}
+
+.file-type-badge.right-aligned {
+    margin-right: 0px;
+    margin-left: 8px;
 }
 
 .img-notifier {
